find: adicionado alfabeto substituto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <img src="assets/cifra.jpeg" alt="Cifra de César" class="imagem" />
 
-    <h1>Criptografe a sua mensagem</h1>
+    <h1 class="titulo">Criptografe a sua mensagem</h1>
     <div class="campo texto">
       <label for="para-criptografar">Digite a sua mensagem:</label>
       <input type="text" class="entrada" id="para-criptografar" />
